# rust-auth

./: Cargo.toml  LICENSE.md  README.md  cert.pem  key.pem  plan.md  tmux_start.sh
migrations/: 20240712200522_users_table.down.sql  20240712200522_users_table.up.sql
src/: auth.rs  lib.rs  main.rs  session.rs  wrappers.rs
