[package]
name = "mini-rust-auth"
version = "0.1.6"
edition = "2021"
license = "MIT"
description = "A maybe to simple authentication crate."

[dependencies]
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls", "postgres"] }
dotenvy = "0.15.7"
actix-web = { version = "4", features = ["rustls-0_23", "cookies"] }
rustls = "0.23"
rustls-pemfile = "2"
argon2 = { version = "0.4", features = ["std"] }
rand = {version = "0.8.5", features = ["std"]}
serde = "1.0.203"
chrono = "0.4.38"
actix-session = {version = "0.9.0", features = ["cookie-session"]}